# SHTools

./: .gitignore  CMakeLists.txt  README.md
SHTools/: CMakeLists.txt  SH.h  SHEval.h  SHProjector.cpp
